# GitPersona

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
gitpersona/: __init__.py  analysis.py  cli.py  github_client.py
gitpersona.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analysis.py
