[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpersona"
version = "0.1.0"
description = "Developer persona and analytics toolkit for GitHub profiles"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "rdarshan927" } ]
dependencies = ["requests"]

[project.scripts]
gitpersona = "gitpersona.cli:main"
